fix field name wraping

--- a/packages/frontend/src/components/validators/ValidatorsList.scss
+++ b/packages/frontend/src/components/validators/ValidatorsList.scss
@@ -19,7 +19,7 @@
   
   @media screen and (max-width: $breakpoint-lg) {
     &__ColumnTitles {
-      grid-template-columns: minmax(0, 40rem) 170px 170px 100px 100px;
+      grid-template-columns: minmax(0, 40rem) 170px 170px 150px 100px;
     }
   }
 
